--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "replace-in-file": "^5.0.2",
         "sitemap": "^6.1.1",
         "unist-util-visit": "^2.0.2"
+    },
+    "dependencies": {
+        "docusaurus": "^1.14.7"
     }
 }
