--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+    "homepage": "https://shyamzzp.github.io/interview-prep",
     "name": "scripts-with-dependencies",
     "version": "1.0.0",
     "description": "Contains script invocations and their dependencies",
     "scripts": {
+        "predeploy": "npm run build-website",
+        "deploy":"gh-pages -d ./_website/build",
         "pre-commit": "npm run check-and-write-data",
         "check-and-write-data": "npm run _replace-tabs && npm run _write-notes-trees && npm run _write-tocs-and-format && npm run _validate-internal-links && npm run _custom-checks-adjustments && npm run _write-website-data",
         "build-website": "npm run check-and-write-data && cd _website && npm run build && cd .. && npm run _generate-sitemap",
@@ -33,6 +36,7 @@
         "unist-util-visit": "^2.0.2"
     },
     "dependencies": {
-        "docusaurus": "^1.14.7"
+        "docusaurus": "^1.14.7",
+        "gh-pages": "^4.0.0"
     }
 }
