--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Contains script invocations and their dependencies",
     "scripts": {
         "predeploy": "npm run build-website",
-        "deploy":"gh-pages -d ./_website/build",
+        "deploy": "gh-pages -d ./_website/build",
         "pre-commit": "npm run check-and-write-data",
         "check-and-write-data": "npm run _replace-tabs && npm run _write-notes-trees && npm run _write-tocs-and-format && npm run _validate-internal-links && npm run _custom-checks-adjustments && npm run _write-website-data",
         "build-website": "npm run check-and-write-data && cd _website && npm run build && cd .. && npm run _generate-sitemap",
@@ -25,6 +25,7 @@
         "express": "^4.17.1",
         "front-matter": "^3.1.0",
         "fs-extra": "^9.0.0",
+        "husky": "^8.0.1",
         "markdown-notes-tree": "^1.10.0",
         "remark-cli": "^8.0.0",
         "remark-frontmatter": "^2.0.0",
@@ -38,5 +39,10 @@
     "dependencies": {
         "docusaurus": "^1.14.7",
         "gh-pages": "^4.0.0"
+    },
+    "husky": {
+        "hooks": {
+            "post-commit": "yarn deploy"
+        }
     }
 }
