--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     },
     "husky": {
         "hooks": {
-            "post-commit": "yarn deploy"
+            "pre-commit": "yarn deploy"
         }
     }
 }
