--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "yarn deploy"
+            "applypatch - msg": "echo\"[Husky] applypatch - msg\"", 
+            "pre - applypatch": "echo\"[Husky] pre - applypatch\"", 
+            "post - applypatch": "echo\"[Husky] post - applypatch\"", 
+            "pre - commit": "echo\"[Husky] pre - commit\""
         }
     }
 }
