--- a/_website/package.json
+++ b/_website/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "start": "docusaurus start",
     "start-and-expose": "docusaurus start --host 0.0.0.0",
-    "build": "docusaurus clean && docusaurus build",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.21",
-    "@docusaurus/preset-classic": "2.0.0-beta.21",
+    "@docusaurus/core": "^2.0.0-alpha.50",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.50",
     "classnames": "^2.2.6",
+    "docusaurus": "^1.14.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
