--- a/_website/package.json
+++ b/_website/package.json
@@ -7,6 +7,7 @@
     "start-and-expose": "docusaurus start --host 0.0.0.0",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
+    "serve": "docusaurus serve",
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
