--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     },
     "dependencies": {
         "docusaurus": "^1.14.7",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "prism-react-renderer": "^1.3.3"
     }
 }
