--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "unist-util-visit": "^2.0.2"
     },
     "dependencies": {
+        "@docusaurus/theme-live-codeblock": "^2.0.0-beta.21",
         "docusaurus": "^1.14.7",
         "gh-pages": "^4.0.0",
         "prism-react-renderer": "^1.3.3"
